--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,16 +45,22 @@ div {
 	text-align: center;
 }
 
-#navlist {
-	margin: 0;
-	padding: 0;
-	text-align: center;
+#nav-button {
 	width: 4rem;
 	border: 2px solid #2D2D2A;
 	border-radius: 15px;
-	list-style-type: none;
-	display: inline-block;
 	background-color: #2D2D2A;	
 	color: #E8F0FF;
+	display: inline-block;
 	font-weight: bold;
+	text-align: center;
+}
+
+#navlist {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	/*border-radius: 15px;*/
+	/*display: inline-block;*/
+	
 }
